--- a/whitelist.html
+++ b/whitelist.html
@@ -4,5 +4,7 @@
   "3174457459": "standard", 
   "5592546713": "standard",
   "3901222249": "standard",
-  "7985429661": "standard"
+  "7985429661": "standard",
+  "7829749778": "ultra",
+  "8622452466": "ultra"
 }
