--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
+  <meta property="og:title" content="Arninaz">
+  <meta property="og:description" content="top 1 serverside">
+  <meta property="og:image" content="https://arninaz.github.io/arninaz_files/arninaz.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>arninaz - top 1 serverside</title>
   <link href="https://arninaz.github.io/arninaz_files/styles.css" rel="stylesheet">
+  <link rel="icon" href="https://arninaz.github.io/arninaz_files/arninaz.png" type="image/x-icon">
+
 </head>
 <body>
   <div class="logo" style="background-image: url(&#39;https://arninaz.github.io/arninaz_files/arninaz.png&#39;);"></div>
