--- a/whitelist.html
+++ b/whitelist.html
@@ -5,6 +5,8 @@
   "5592546713": "standard",
   "3901222249": "standard",
   "7985429661": "standard",
+  "3720946519": "standard",
+  "3469331683": "standard",
   "7829749778": "ultra",
   "8622452466": "ultra"
 }
