--- a/whitelist.html
+++ b/whitelist.html
@@ -8,5 +8,6 @@
   "3720946519": "standard",
   "3469331683": "standard",
   "7829749778": "ultra",
-  "8622452466": "ultra"
+  "8622452466": "ultra",
+  "3670676541": "ultra"
 }
