--- a/whitelist.html
+++ b/whitelist.html
@@ -9,5 +9,6 @@
   "3469331683": "standard",
   "7829749778": "ultra",
   "8622452466": "ultra",
-  "3670676541": "ultra"
+  "3670676541": "ultra",
+  "1600295122": "ultra"
 }
