--- a/whitelist.html
+++ b/whitelist.html
@@ -10,5 +10,6 @@
   "7829749778": "ultra",
   "8622452466": "ultra",
   "3670676541": "ultra",
-  "1600295122": "ultra"
+  "1600295122": "ultra",
+  "8650420894": "premium"
 }
