--- a/whitelist.html
+++ b/whitelist.html
@@ -7,6 +7,7 @@
   "7985429661": "standard",
   "3720946519": "standard",
   "3469331683": "standard",
+  "8622452466": "ultra",
   "7829749778": "ultra",
   "3670676541": "ultra",
   "1600295122": "ultra",
