--- a/whitelist.html
+++ b/whitelist.html
@@ -5,7 +5,7 @@
   "5592546713": "standard",
   "3901222249": "standard",
   "7985429661": "standard",
-  "3720946519": "standard",
+  "3720946519": "premium",
   "3469331683": "standard",
   "8622452466": "ultra",
   "7829749778": "ultra",
