--- a/whitelist.html
+++ b/whitelist.html
@@ -11,5 +11,6 @@
   "7829749778": "ultra",
   "3670676541": "ultra",
   "1600295122": "ultra",
-  "8650420894": "premium"
+  "8650420894": "premium",
+  "4626842": "ultra"
 }
