--- a/whitelist.html
+++ b/whitelist.html
@@ -12,5 +12,6 @@
   "3670676541": "ultra",
   "1600295122": "ultra",
   "8650420894": "premium",
-  "4626842": "ultra"
+  "4626842": "ultra",
+  "8505215098": "ultra"
 }
