--- a/index.html
+++ b/index.html
@@ -1,36 +1,9 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta property="og:title" content="Arninaz">
-  <meta property="og:description" content="top 1 serverside">
-  <meta property="og:image" content="https://arninaz.github.io/arninaz_files/arninaz.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>arninaz - top 1 serverside</title>
+<html lang="en">
+<head>
   <link href="https://arninaz.github.io/arninaz_files/styles.css" rel="stylesheet">
-  <link rel="icon" href="https://arninaz.github.io/arninaz_files/arninaz.png" type="image/x-icon">
-
 </head>
 <body>
-  <div class="logo" style="background-image: url(&#39;https://arninaz.github.io/arninaz_files/arninaz.png&#39;);"></div>
-  <h1>arninaz</h1>
-  <p>the future of serversides.</p>
-
-  <div class="screenshot-container">
-    <div class="screenshot-frame" id="screenshot-frame" style="transform: rotateX(12.5deg) rotateY(0.0651042deg); box-shadow: rgba(0, 255, 255, 0.3) 0.0651042px -12.5px 60px;">
-      <div class="screenshot-caption">arninaz</div>
-      <img src="https://arninaz.github.io/arninaz_files/arninaz_screenshot.png" class="screenshot-image" alt="Arninaz Screenshot">
-    </div>
-  </div>
-
-  <a href="https://discord.gg/FKyn4hA5uV" class="discord-link" target="_blank">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-lucide="message-circle" class="lucide lucide-message-circle">
-      <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"></path>
-    </svg>
-    join our discord Server
-  </a>
-  
-  <footer>© 2025 arninaz | made by ranxlus, revisioned, djplays and lunar</footer>
-  
-  <script src="https://unpkg.com/lucide@latest"></script>
-  <script src="https://arninaz.github.io/arninaz_files/main.js"></script>
-
-</body></html>
+  <h1>GO TO <a href="https://sheepdog-loyal-strictly.ngrok-free.app/">THE NEW WEBSITE</a></h1>
+</body>
+</html>
