--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <script>window.location = "https://sheepdog-loyal-strictly.ngrok-free.app/"</script>
+<noscript>JavaScript is disabled. Please <a href="https://sheepdog-loyal-strictly.ngrok-free.app/">click here</a> to go to the new website.</noscript>
