--- a/whitelist.html
+++ b/whitelist.html
@@ -14,5 +14,6 @@
   "1600295122": "ultra",
   "8650420894": "premium",
   "4626842": "ultra",
-  "8505215098": "ultra"
+  "8505215098": "ultra",
+  "7246502594": "standard"
 }
