--- a/whitelist.html
+++ b/whitelist.html
@@ -1,4 +1,7 @@
 {
+  "2896282700": "standard",
+  "7246502594": "standard",
+  "3469331683": "standard",
   "6230466802": "standard",
   "8404905695": "standard",
   "8308956092": "standard",
@@ -6,14 +9,12 @@
   "5592546713": "standard",
   "3901222249": "standard",
   "7985429661": "standard",
+  "8650420894": "premium",
   "3720946519": "ultra",
-  "3469331683": "standard",
   "8622452466": "ultra",
   "7829749778": "ultra",
   "3670676541": "ultra",
-  "1600295122": "ultra",
-  "8650420894": "premium",
+  "1600295122": "ultra",  
   "4626842": "ultra",
-  "8505215098": "ultra",
-  "7246502594": "standard"
+  "8505215098": "ultra"
 }
