--- a/whitelist.html
+++ b/whitelist.html
@@ -9,6 +9,7 @@
   "5592546713": "standard",
   "3901222249": "standard",
   "7985429661": "standard",
+  "2045715825": "standard",
   "8650420894": "premium",
   "3720946519": "ultra",
   "8622452466": "ultra",
