--- a/whitelist.html
+++ b/whitelist.html
@@ -11,6 +11,7 @@
   "7985429661": "standard",
   "2045715825": "standard",
   "8650420894": "premium",
+  "2354482071": "premium",
   "3720946519": "ultra",
   "8622452466": "ultra",
   "7829749778": "ultra",
