--- a/whitelist.html
+++ b/whitelist.html
@@ -1,4 +1,6 @@
 {
+  "7707256497": "standard",
+  "8680278065": "standard",
   "2896282700": "standard",
   "7246502594": "standard",
   "3469331683": "standard",
