--- a/whitelist.html
+++ b/whitelist.html
@@ -1,5 +1,7 @@
 {
   "7707256497": "standard",
+  "8737657086": "standard",
+  "8519600590": "standard",
   "8680278065": "standard",
   "2896282700": "standard",
   "7246502594": "standard",
