--- a/whitelist.html
+++ b/whitelist.html
@@ -9,7 +9,8 @@
   "6230466802": "standard",
   "8404905695": "standard",
   "8308956092": "standard",
-  "3174457459": "standard", 
+  "3174457459": "standard",
+  "8528615554": "stabdard",
   "5592546713": "standard",
   "3901222249": "standard",
   "7985429661": "standard",
