--- a/whitelist.html
+++ b/whitelist.html
@@ -1,5 +1,6 @@
 {
   "7707256497": "standard",
+  "5534986083": "standard",
   "5005172086": "standard",
   "8737657086": "standard",
   "8519600590": "standard",
