--- a/whitelist.html
+++ b/whitelist.html
@@ -1,5 +1,7 @@
 {
   "7707256497": "standard",
+  "1297712817": "standard",
+  "8939066946": "premium",
   "5534986083": "standard",
   "5005172086": "standard",
   "8737657086": "standard",
