--- a/whitelist.html
+++ b/whitelist.html
@@ -26,5 +26,6 @@
   "3670676541": "ultra",
   "1600295122": "ultra",  
   "4626842": "ultra",
-  "8505215098": "ultra"
+  "8505215098": "ultra",
+  "8382271747": "ultra",
 }
