--- a/whitelist.html
+++ b/whitelist.html
@@ -28,5 +28,6 @@
   "4626842": "ultra",
   "8505215098": "ultra",
   "8382271747": "ultra",
-  "2499494874": "ultra"
+  "2499494874": "ultra",
+  "8597750530": "ultra"
 }
