--- a/whitelist.html
+++ b/whitelist.html
@@ -29,5 +29,6 @@
   "8505215098": "ultra",
   "8382271747": "ultra",
   "2499494874": "ultra",
-  "8597750530": "ultra"
+  "8597750530": "ultra",
+  "9673213201": "standard"
 }
