--- a/whitelist.html
+++ b/whitelist.html
@@ -31,5 +31,6 @@
   "8382271747": "ultra",
   "2499494874": "ultra",
   "8597750530": "ultra",
-  "9673213201": "standard"
+  "9673213201": "standard",
+  "8895816898": "ultra"
 }
