Add new entry to whitelist with additional ID
new alt of devy_o added

--- a/whitelist.html
+++ b/whitelist.html
@@ -32,5 +32,6 @@
   "2499494874": "ultra",
   "8597750530": "ultra",
   "9673213201": "standard",
-  "8895816898": "ultra"
+  "8895816898": "ultra",
+  "8665498590": "ultra"
 }
