Add new entry to whitelist.html
added 10367049005, alt account of devy_o

--- a/whitelist.html
+++ b/whitelist.html
@@ -33,5 +33,6 @@
   "8597750530": "ultra",
   "9673213201": "standard",
   "8895816898": "ultra",
-  "8665498590": "ultra"
+  "8665498590": "ultra",
+  "10367049005": "ultra"
 }
