--- a/whitelist.html
+++ b/whitelist.html
@@ -34,5 +34,6 @@
   "9673213201": "standard",
   "8895816898": "ultra",
   "8665498590": "ultra",
-  "10367049005": "ultra"
+  "10367049005": "ultra",
+  "9388248027": "premium"
 }
