--- a/whitelist.html
+++ b/whitelist.html
@@ -5,6 +5,7 @@
   "8939066946": "premium",
   "5534986083": "standard",
   "5005172086": "standard",
+  "1600295122": "ultra", 
   "8737657086": "standard",
   "8519600590": "standard",
   "2896282700": "standard",
