--- a/whitelist.html
+++ b/whitelist.html
@@ -38,5 +38,5 @@
   "10367049005": "ultra",
   "9388248027": "premium",
   "6154485656": "premium",
-  "2423854123": "standard",
+  "2423854123": "standard"
 }
