Fix duplicate entry for uid in whitelist

--- a/whitelist.html
+++ b/whitelist.html
@@ -37,6 +37,5 @@
   "8665498590": "ultra",
   "10367049005": "ultra",
   "9388248027": "premium",
-  "6154485656": "premium",
-  "2423854123": "standard"
+  "6154485656": "premium"
 }
